# SPDX-License-Identifier: BSD-3-Clause
# See Notices.txt for copyright information
[package]
name = "softfloat-sys"
version = "0.1.2"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
license = "BSD-3-Clause"
description = "Rust bindings for Berkeley SoftFloat 3"
repository = "https://salsa.debian.org/Kazan-team/softfloat-sys"

[dependencies]
c99 = "0.1.1"

[build-dependencies]
cc = "1.0"
cc-version = "0.1.0"
