# SPDX-License-Identifier: BSD-3-Clause
# See Notices.txt for copyright information
[package]
name = "softfloat-sys-riscv"
version = "0.1.2"
authors = ["msyksphinz <msyksphinz.dev@gmail.com>"]
license = "BSD-3-Clause"
description = "Rust bindings for Berkeley SoftFloat 3 with RISC-V configuration build"
repository = "https://github.com/msyksphinz-self/softfloat-sys-riscv"

[dependencies]
c99 = "0.1.1"

[build-dependencies]
cc = "1.0"
cc-version = "0.1.0"
